# Bohrium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_proj.ps1
include/: boh_except.h  bohrium.h  guid.h  plugin.h  plugin_loader.h
src/: boh_except.c  bohrium.c  guid.c  main.c  plugin.c  plugin_loader.c
